# serializer version: 1
# name: TestGet.test_ok
  dict({
    'created_at': 'approximately_now_isoformat',
    'description': 'Created Tobacco mosaic virus (TMV)',
    'diff': dict({
      '_id': 'bf1b993c',
      'abbreviation': 'TMV',
      'isolates': list([
      ]),
      'last_indexed_version': None,
      'lower_name': 'tobacco mosaic virus',
      'name': 'Tobacco mosaic virus',
      'reference': dict({
        'id': 1,
      }),
      'schema': list([
      ]),
      'verified': False,
      'version': 0,
    }),
    'id': 'bf1b993c.0',
    'index': None,
    'method_name': 'create',
    'otu': dict({
      'id': 'bf1b993c',
      'name': 'Tobacco mosaic virus',
      'version': 0,
    }),
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Test Reference',
    }),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
  })
# ---
# name: test_find
  dict({
    'documents': list([
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created Potato virus X (PVX)',
        'id': 'fb085f7f.0',
        'index': None,
        'method_name': 'create',
        'otu': dict({
          'id': 'fb085f7f',
          'name': 'Potato virus X',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
      dict({
        'created_at': 'approximately_now_isoformat',
        'description': 'Created Tobacco mosaic virus (TMV)',
        'id': 'bf1b993c.0',
        'index': None,
        'method_name': 'create',
        'otu': dict({
          'id': 'bf1b993c',
          'name': 'Tobacco mosaic virus',
          'version': 0,
        }),
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Test Reference',
        }),
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
